# aiida-submission-controller

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.json  setup.py  submission_controller.py
.github/workflows/: cd.yml  ci.yml  update_changelog.py  validate_release_tag.py
aiida_submission_controller/: __init__.py  base.py  from_group.py  submission_controller.py
examples/: add.py  add_in_batches.py  pw_base.py  pw_base_from_group.py
tests/: test_base.py
