[build-system]
requires = ["flit_core>=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiida-submission-controller"
dynamic = ["version"]
authors = [
  {name = "Giovanni Pizzi"},
  {name = "Austin Zadoks"},
  {name = "Marnik Bercx"}
]
description = "Utilities for controlling submission flow in AiiDA"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AiiDA",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"

dependencies = [
    "aiida-core>=1.0",
    "pydantic~=1.10.4",
    "rich",
]

[project.urls]
Source = "https://github.com/aiidateam/aiida-submission-controller"

[project.optional-dependencies]
qe = [
    "aiida-quantumespresso"
]
dev = [
    "pre-commit~=2.17.0",
    "pylint-pydantic~=0.1.8"
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
